[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rundb"
version = "0.0.1"
description = "A simple python wrapper around sqlite3 to run ML experiments"
readme = "README.md"
authors = [{ name = "lfrati", email = "lfrati.github@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["databases","SQL"]
dependencies = []
requires-python = ">=3.10"

    [project.optional-dependencies]
    dev = ["bumpver", "pip-tools", "build", "twine", "pytest"]

    [project.urls]
    Homepage = "https://github.com/lfrati/runDB"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]

